# SolAnalyser

./: README.md
ContractAnalyser/: README.md
MuContract/: CMakeLists.txt  README.md
MuContract/libSolInstru/: ASTAnalyser.cpp  ASTAnalyser.hpp  ASTNodes.cpp  ASTNodes.hpp  CMakeLists.txt
MuContract/libUtils/: CMakeLists.txt  Utils.cpp  Utils.hpp
MuContract/soli/: CMakeLists.txt  main.cpp
RandomInputGenerator/: .project  README.md  pom.xml
RandomInputGenerator/scriptFiles/: Generate_Abi_Opcode_Bytecode.sh  RandomTimeTaken.txt  Run_Random_InputGenerator.sh  removeAll.py
RandomInputGenerator/src/main/java/GenerateTestFile/: GenerateTestFile.java
RandomInputGenerator/src/main/java/abianalyser/: AnalyseAbiFile.java  StructType.java
RandomInputGenerator/src/main/java/randomGenerator/: AdressGenerator.java  BooleanGenerator.java  ByteGenerator.java  IntegerGenerator.java  StringGenerator.java
RandomInputGenerator/src/test/java/abianalysertest/: AppTest.java
